# paws-tools

./: .flake8  CONTRIBUTING.md  PAWS_example.R  PAWS_plot.R  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
paws_tools/: __init__.py  cli.py  slp_to_csv.py  util.py
r-scripts/: 3-28PAWS_example.R  9-13PAWS_example.R  PAWS_example.R  PAWS_plot.R
tests/: conftest.py  test_entrypoints.py  test_slp_to_csv.py
tests/fixtures/: slp.py
