[metadata]
name = paws-tools
version = attr: paws_tools.__version__
author = Josh Thackray
author_email = thackray@rutgers.edu
maintainer = Josh Thackray
maintainer_email = thackray@rutgers.edu
url = https://github.com/tischfieldlab/paws-tools
description = Collection of tools for working with PAWS
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = paws
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    click
    numpy
    pandas
    sleap-io
    typing-extensions
    matplotlib
    seaborn
    tqdm

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    mypy
    pydocstyle
    toml
    twine
    build

[options.exclude_package_data]
tests = *
docs = *

[options.packages.find]
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    paws-tools = paws_tools.cli:cli

[mypy]
follow_imports = skip
ignore_missing_imports = True
ignore_missing_imports_per_module = True
warn_unused_configs = True

[pydocstyle]
convention = google
match-dir = 'paws_tools'
